fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@
 
 html, body, .root, .MainPage, .spinner-wrapper{ 
     min-height: 100vh;
-    overflow-x: hidden;
     background-color: #525252;
 }
 
