--- a/src/components/LyricsPage.css
+++ b/src/components/LyricsPage.css
@@ -202,7 +202,7 @@
     }
 
     .LyricsPage .lyrics {
-        padding: 0.5rem;
+        padding: 0 0.5rem 0 0.5rem;
     }
 
     .LyricsPage .inner-header{
