--- a/src/components/ResultCard.css
+++ b/src/components/ResultCard.css
@@ -28,6 +28,7 @@
 .ResultCard .title {
     font-weight: bold;
     font-size: 2.5rem;
+    margin-bottom: 0.2rem;
 }
 
 .ResultCard .artist {
